-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
2f9608630b9899dda3242f031fa4a4295d0a2e22
Run the following application:
import QtQuick 2.0 Rectangle { width: 640 height: 480 TextInput { anchors.centerIn: parent width: parent.width } }
Choose an input method with pre-edit text and input some text. The text will not display until you commit it. Do the same, and the input will display correctly. If you initialize the input field with some text, the pre-edit text will display on the first try, regardless of whether it's prepended or appended to the existing contents, so this is only reproducible when the text input is completely empty.