Fix preedit text visibility when TextInput is empty

Task-number: QTBUG-22646

Change-Id: I5162ffdebdee6f956a9a79b2307a2ac53cc4890b
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@nokia.com>